# Smeagol

./: .gitignore  CMakeLists.txt  Makefile
include/: config.h  gui.h  inputs.h  layout.h  state.h  state_manager.h  test.h
src/: config.cpp  gui.cpp  main.cpp  state_manager.cpp
